# CICD_course

./: .env.example  .gitignore  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Lesson plan/: CODEX_CLOUD_CICD_COURSE_PLAN_TH.md  CODEX_CLOUD_CICD_LEARNING_CHECKLIST_TH.md
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_create_devices_and_telemetry.py  0002_add_message_id_to_telemetry.py
api/app/: __init__.py  config.py  db.py  logging.py  main.py  models.py  mqtt_subscriber.py  read_api.py  telemetry.py
api/tests/: test_health.py  test_read_api.py
docs/: aws-free-tier-gate.md  cost-safety.md  learning-checklist.md  learning-log.md  learning-qa.md  network-diagram.md  phase-10-registry-notes.md  phase-11-local-cd-notes.md  phase-12-rollback-notes.md  phase-13-release-tag-notes.md  phase-14-deploy-from-registry-notes.md  phase-15-compose-hardening-notes.md  phase-6-mqtt-notes.md  phase-7-read-api-notes.md  phase-8-nginx-notes.md  phase-9-ci-notes.md
infra/compose/: compose.local.yaml  compose.registry.yaml  compose.yaml
infra/nginx/: default.conf
scripts/: deploy-local.ps1  deploy-registry-local.ps1
simulator/: Dockerfile  pyproject.toml  simulator.py
