[project]
name = "mini-telemetry-api"
version = "0.1.0"
description = "FastAPI backend for the Mini Telemetry Platform learning project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
