[project]
name = "mini-telemetry-api"
version = "0.1.0"
description = "FastAPI backend for the Mini Telemetry Platform learning project"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17,<2.0",
    "fastapi>=0.116,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "psycopg[binary]>=3.3,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
